Another minor fix

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "WiresAndLaddersAPI",
+  "name": "wiresandladdersapi",
   "version": "1.0.0",
   "description": "Wires&Ladders API",
   "main": "index.js",
